--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -108,7 +108,8 @@
 \PersonalEntry{Phone}{+46 708499543}
 \PersonalEntry{Mail}{attilanagy85@gmail.com}
 \PersonalEntry{GitHub}{\href{https://github.com/NagyAttila}{https://github.com/NagyAttila}}
-%\PersonalEntry{HomePage}{https://nagyattila.tech}
+\PersonalEntry{CodePen}{\href{https://codepen.io/attila-nagy-the-sasster}{https://codepen.io/attila-nagy-the-sasster}}
+\PersonalEntry{HomePage}{\href{https://nagyattila.tech}{https://nagyattila.tech}}
 
 \NewPart{Introduction}{}
 
