Update CV with Volvo Cars work experience

--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -105,27 +105,33 @@
 %%% ------------------------------------------------------------
 \NewPart{Contact}{}
 
-\PersonalEntry{Phone}{+46 708499543}
+\PersonalEntry{Phone}{+46 12345678}
 \PersonalEntry{Mail}{attilanagy85@gmail.com}
 \PersonalEntry{GitHub}{\href{https://github.com/NagyAttila}{https://github.com/NagyAttila}}
-\PersonalEntry{CodePen}{\href{https://codepen.io/attila-nagy-the-sasster}{https://codepen.io/attila-nagy-the-sasster}}
-\PersonalEntry{HomePage}{\href{https://nagyattila.tech}{https://nagyattila.tech}}
+% \PersonalEntry{CodePen}{\href{https://codepen.io/attila-nagy-the-sasster}{https://codepen.io/attila-nagy-the-sasster}}
+% \PersonalEntry{HomePage}{\href{https://nagyattila.tech}{https://nagyattila.tech}}
 
 \NewPart{Introduction}{}
 
-I have a background in telecommunication, automotive industry and machine learning. In the recent years I have developed an interest in deep learning through self-studies, that led to my previous job at RumbleStrip. We worked on adaptive spoilers for the heavy truck industry to lower fuel consumption. Before that, I worked with self-driving cars at Volvo Cars in Active-Safety, and with 3G networks at Nokia Siemens Networks in Budapest. Currently I am working on PacketCore at Ericsson.
+I have a background in telecommunication, automotive industry and machine learning. In the recent years, I mostly worked with Global Navigation Satellite Systems and dead reckoning for positioning. Before that I worked at PacketCore at Ericsson, with adaptive spoilers for the heavy truck industry to lower fuel consumption and self-driving cars at Volvo Cars in Active-Safety.
 
-My technical interest mostly rotates around open-source software development, cryptography, Linux, machine and deep learning, functional programming, and a little bit of web-development. In my working environment, I tend to be social and discuss books and podcasts I read and listened recently.
-
-My current greatest endeavour is to start my own company and work as a free-lancer.
-
-  %Most of my personal life I like to spend in nature doing sports like climbing, yoga, running, hiking and camping. When the winters are too rough on me, I like to indulge myself in board game nights and old science fiction movies from the 50's. Furthermore, I have great interest in culinary pleasures. As one of my hobbies, I build a thermostat box to be able experiment with different food fermentation methods. One of my success stories is tempeh from chickpeas, and currently focusing on fermentation with lentils and rice. As a final interest, I have good stories from my travels in Southeast Asia involving rocket launchers in Cambodia, acrobatics with monkeys in Indonesia, finding skeleton remains in a cave on The Philippines, and many more.
+My technical interest mostly rotates around open-source software, cryptography, Linux, machine and deep learning. In my working environment, I tend to be social and discuss books and podcasts I read and listened recently.
 
 %%% Work
 %%% ------------------------------------------------------------
 \NewPart{Work}{}
 
-\WorkEntry{HiQ, Consultant at Ericsson}{04/2020 -- Now}{Software Developer, Sweden, Full-time}
+\WorkEntry{Volvo Cars}{09/2021 -- Now}{Software Developer, Sweden, Full-time}
+
+\SkillsEntry{Roles:}{SW Developer}
+
+\SkillsEntry{Programming:}{C++, Python}
+
+\SkillsEntry{Applications:}{Positioning, Dead Reckoning}
+
+\sepspace
+
+\WorkEntry{HiQ, Consultant at Ericsson}{04/2020 -- 09/2021}{Software Developer, Sweden, Full-time}
 
 \SkillsEntry{Roles:}{Functional Tester, System Tester, DevOps}
 
@@ -231,12 +237,10 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 \NewPart{Interest}{}
 \SkillsEntry{Technical:}{machine learning}
 \SkillsEntry{}{free/open-source software}
-\SkillsEntry{}{blockchain technology}
 \SkillsEntry{}{functional programming}
 
 \sepspace
 \SkillsEntry{Sports:}{rock climbing}
-\SkillsEntry{}{slacklining}
 \SkillsEntry{}{running}
 \SkillsEntry{}{yoga}
 
@@ -248,9 +252,13 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 
 \NewPart{Projects}{}
 
-\ProjectEntry{HiQ, Consultant at Ericsson}{04/2020 -- Now}
-{After 10 years I am back in Telecom working on the next generation of telecommunication networks. Most of my work
-currently involves development on the PacketCore network, Functional Testing using TTCN and System Tests.
+\ProjectEntry{Coconut Island, Consultant at Volvo Cars}{09/2021 -- Now}
+{Currently, I am working with Positioning in Infotainment at Volvo Cars. The challenge on this assignment is to design a scaleable solution that can satisfy the needs of multiple markets and product variants at the same time in a flexible way. The every day tools I am using on this assignment are Git, Gerrit, Android, C++ and Python. My roll involves both SW and HW testing, functional development and maintenance of legacy products on multiple ECUs in the car.
+}
+
+\ProjectEntry{HiQ, Consultant at Ericsson}{04/2020 -- 9/2021}
+{After 10 years I was back in Telecom working on the next generation of telecommunication networks. Most of my work
+involved development on the PacketCore network, Functional Testing using TTCN and System Tests.
 }
 
 \ProjectEntry{RumbleStrip}{09/2017 -- 10/2019}
