Add pdf of newest version

--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -121,7 +121,7 @@ My technical interest mostly rotates around open-source software, cryptography, 
 %%% ------------------------------------------------------------
 \NewPart{Work}{}
 
-\WorkEntry{Volvo Cars}{09/2021 -- Now}{Software Developer, Sweden, Full-time}
+\WorkEntry{Coconut Island, Consultant at Volvo Cars}{09/2021 -- Now}{Software Developer, Sweden, Full-time}
 
 \SkillsEntry{Roles:}{SW Developer}
 
