Add minor adjustment

--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -123,7 +123,7 @@ My technical interest mostly rotates around open-source software, cryptography, 
 
 \WorkEntry{Coconut Island, Consultant at Volvo Cars}{09/2021 -- Now}{Software Developer, Sweden, Full-time}
 
-\SkillsEntry{Roles:}{SW Developer}
+\SkillsEntry{Roles:}{SW Developer and Tester}
 
 \SkillsEntry{Programming:}{C++, Python}
 
